# Data-Engineering-at-Converza

./: .env  .gitignore  README.md  bronze_layer.py  config.py  data_generator.py  database.py  docker-compose.yml  etl_pipeline.py  gold_layer.py  main.py  neon.py  pyproject.toml  requirements.txt  s3.py  silver_layer.py  stop.sh  test_pipeline.py  transformations.py
converza-pipeline/: DOCKER_DEPLOYMENT.md  PROJECT_SUMMARY.md  README.md  dashboard.html  generate_dashboard.py  pyproject.toml  run_standalone.py  start.sh
converza-pipeline/dashboard/: app.py
converza-pipeline/data/: converza_pipeline.db
converza-pipeline/data/raw_calls/: CALL_021F0922.json  CALL_08B3A1D2.json  CALL_0DA9EB93.json  CALL_10904CBC.json  CALL_1290DED2.json  CALL_145BF02C.json  CALL_15A21E6C.json  CALL_17DEACDF.json  CALL_1824EBA8.json  CALL_1F688EDB.json  CALL_2121928B.json  CALL_234FC123.json  CALL_26666B32.json  CALL_26B269FC.json  CALL_2C83665A.json  CALL_2F5FD04F.json  CALL_2FDE20B1.json  CALL_302CC6D2.json  CALL_32B8CB92.json  CALL_359E4051.json  CALL_3F828410.json  CALL_413144F7.json  CALL_4317576E.json  CALL_44FC3DDD.json  CALL_4C317B30.json  CALL_4DF7E487.json  CALL_544B35BE.json  CALL_547177DC.json  CALL_56559F59.json  CALL_59456B87.json  CALL_5A2DB833.json  CALL_5ACE75BC.json  CALL_5B07A4C4.json  CALL_5B538DB1.json  CALL_63247251.json  CALL_65EA26E0.json  CALL_6931D04B.json  CALL_7114E136.json  CALL_713BC928.json  CALL_724F88A9.json  (+61 more)
converza-pipeline/docker/: init-data.sql
converza-pipeline/src/data/raw_calls/: CALL_01E31498.json  CALL_021FCA3D.json  CALL_096635B2.json  (+76 more)
(+85 files in other folders)
